# MuliplayerGame

./: README.md
src/: globalConfig.c  globalConfig.h
src/client/: CMakeLists.txt  clientCommunication.c  clientCommunication.h  clientGameData.c  clientGameData.h  clientInterface.c  clientInterface.h  main.c
src/server/: CMakeLists.txt  main.c  serverBeast.c  serverBeast.h  serverCommunication.c  serverCommunication.h  serverDroppedTreasure.c  serverDroppedTreasure.h  serverGameLogic.c  serverGameLogic.h  serverInterface.c  serverInterface.h  serverPlayer.c  serverPlayer.h
